lustre/include/lustre_disk.h
@@ -131,8 +131,9 @@ struct lustre_sb_info {
 	char			  lsi_fstype[16];
 	struct backing_dev_info   lsi_bdi;     /* each client mountpoint needs
 						  own backing_dev_info */
+	/* protect lsi_lwp_list */
+	struct mutex		  lsi_lwp_mutex;
 	struct list_head	  lsi_lwp_list;
-	spinlock_t		  lsi_lwp_lock;
 	unsigned long		  lsi_lwp_started:1;
 };
 
